# grantai

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  submission.md
ai-engine/: Dockerfile  README.md  pyproject.toml
ai-engine/app/: __init__.py  db.py  main.py  models.py  schemas.py
ai-engine/app/core/: __init__.py  chroma.py  embeddings.py  gemini.py  security.py  settings.py
ai-engine/app/routers/: __init__.py  ai.py
ai-engine/app/services/: __init__.py  interview.py  letter_generator.py  matcher.py  scraper.py
ai-engine/data/: grants.db
ai-engine/data/chroma/: chroma.sqlite3
ai-engine/tests/: test_matcher.py
backend/: Dockerfile  README.md  pom.xml
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/grants/: page.tsx
frontend/app/interview/: page.tsx
frontend/app/letters/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/tracker/: page.tsx
frontend/app/world/: page.tsx
frontend/components/auth/: auth-shell.tsx
frontend/components/dashboard/: ActivityFeed.tsx  (+8 more)
frontend/hooks/: useDashboardData.ts  useInterviewSession.ts  useLetterEditor.ts  usePracticeModal.ts
frontend/lib/: api-client.ts  api.ts  auth-store.ts  compare-store.ts  demo-data.ts  fonts.ts  format-helpers.ts  interview-helpers.ts  onboarding-constants.ts  types.ts  utils.ts
frontend/public/: world_universities_9363_list.json
(+122 files in other folders)
