[tool.poetry]
name = "grantai-ai-engine"
version = "0.1.0"
description = "GrantAI FastAPI AI engine for grant matching and writing"
authors = ["GitHub Copilot"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
chromadb = "^0.5.23"
google-generativeai = "^0.8.5"
sentence-transformers = "^3.3.1"
httpx = "^0.28.1"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
psycopg = { version = "^3.2.4", extras = ["binary"] }
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
